# PhishLens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
evaluation/: README.md  evaluation.py
examples/: benign.txt  spear_phish.txt
phishlens/: __init__.py  aggregate.py  cli.py  models.py  text.py
phishlens/detectors/: __init__.py  authorship.py  infrastructure.py  osint.py  pretext.py  psychology.py  sender.py
tests/: test_detectors.py
